# x.com

./: .gitignore  README.md  setup.sh  shutdown.sh
.github/workflows/: auth-service-test.yml  post-service-test.yml  user-service-test.yml
auth_microservice/: .gitignore  README.md
auth_microservice/src/alembic/versions/: 2024_10_19_2056-f5f69c750568_create_users_table.py
auth_microservice/src/database/models/: user.py
auth_microservice/src/excepltions/: auth.py
auth_microservice/src/repositories/: user.py
auth_microservice/src/routes/: __init__.py  auth.py
auth_microservice/src/schemas/: auth.py  user.py
auth_microservice/src/services/: auth_service.py  password_service.py  token_service.py
infrastructure/: docker-compose.yaml  docker-compose.yml  nginx.conf
infrastructure/k8s/: namespace.yml
infrastructure/k8s/configs/: minio-config.yaml  x-post-config.yaml  x-user-config.yaml
infrastructure/k8s/ingress/: config.yml  ingress.yaml  ingress.yml
infrastructure/k8s/minio/: deployment.yaml  deployment.yml  pvc.yaml  pvc.yml  service.yaml  service.yml
infrastructure/k8s/rabbitmq/: deployment.yaml  deployment.yml  pvc.yml  service.yml
infrastructure/k8s/secrets/: minio-secret.yml  rabbitmq-secret.yml  x-auth-secret.yml  x-post-secret.yml  x-user-secret.yml
infrastructure/k8s/x-auth-service/: auth-secret.yml  deployment.yml  service.yaml
infrastructure/k8s/x-auth-service/postgres/: deployment.yaml  deployment.yml  pvc.yml  service.yml
infrastructure/k8s/x-post-service/: deployment.yaml  deployment.yml  post-secret.yml  service.yml
infrastructure/k8s/x-post-service/postgres/: deployment.yaml  deployment.yml  pvc.yml  service.yml
infrastructure/k8s/x-user-service/: deployment.yml  service.yml  user-service.yml
infrastructure/k8s/x-user-service/postgres/: deployment.yaml  deployment.yml  pvc.yml  service.yml
infrastructure/x-auth-service/: Deployment.yml
x-auth-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
x-auth-service/.github/workflows/: testing.yml
x-auth-service/src/: .env.dist  create_fastapi_app.py  main.py  prestart.sh
x-auth-service/src/alembic/: env.py
x-auth-service/src/alembic/versions/: 2024_11_22_2140-610c15941ce5_add_email_column.py  2025_01_03_2317-a97e495dd51c_create_refreshsession_table.py
x-auth-service/src/configuration/: config.py
x-auth-service/src/configuration/rabbitmq/: base.py  user_queue.py
x-auth-service/src/database/: session.py
x-auth-service/src/database/models/: __init__.py  base.py  refresh_session.py  user.py
x-auth-service/src/dto/: user.py
x-auth-service/src/exceptions/: base_exception.py
x-auth-service/src/repositories/: refresh_session_repository.py  user.py
x-auth-service/src/routes/: __init__.py
x-auth-service/src/routes/v1/: __init__.py  auth.py
x-auth-service/src/routes/v1/auth/: __init__.py  views.py
x-auth-service/src/schemas/: auth.py  user.py
x-auth-service/src/services/: auth_service.py  jwt_service.py  password_service.py  token_service.py
x-auth-service/tests/: conftest.py
x-post-service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
x-post-service/src/: .env.dist  create_fastapi_app.py  main.py
x-post-service/src/alembic/versions/: 2025_01_18_0020-2344c2f06508_create_posts_table.py  2025_01_18_2345-ee808bcce893_create_posts_table.py  2025_01_22_2146-200dfe1a7d5f_create_likes_table.py  2025_02_02_2308-b1c3696fea3b_create_posts_table.py  2025_02_02_2309-cab4203d8279_create_likes_table.py  2025_02_03_2232-82d831b7bea3_add_author_username_field.py
x-post-service/src/configuration/: config.py
x-post-service/src/database/: session.py
x-post-service/src/database/models/: __init__.py  base.py  like.py  post.py  user.py  utils.py
x-post-service/src/exceptions/: base_exception.py  post_exceptions.py  token_exceptions.py
x-post-service/src/repositories/: post_repository.py
x-post-service/src/routes/: __init__.py
x-post-service/src/routes/v1/: __init__.py  post.py  token_introspection.py
x-post-service/src/schemas/: post.py  token.py
x-post-service/src/services/: post_service.py
x-user-service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
x-user-service/src/: .env.dist  create_fastapi_app.py  main.py  prestart.sh
x-user-service/src/alembic/versions/: 2024_11_25_2333-5eabcca84a38_create_users_table.py  2024_12_12_2238-6320b580d78d_change_name_and_bio_fields_nullable_rule.py  2025_01_07_1858-5070ec254857_create_follows_table.py  2025_02_02_2234-c7de81a7c0e8_add_user_id_field.py  2025_02_11_2355-9555897e8e22_add_avatar_url_field.py
x-user-service/src/configuration/: config.py
x-user-service/src/configuration/rabbitmq/: base.py  user_queue.py
x-user-service/src/database/: session.py
x-user-service/src/database/models/: __init__.py  follow.py  user.py
x-user-service/src/dto/: user.py
x-user-service/src/exceptions/: base_exception.py  token_exceptions.py  user_exceptions.py
x-user-service/src/repositories/: user_repository.py
x-user-service/src/routes/: __init__.py  user.py
x-user-service/src/routes/v1/: __init__.py  token_introspection.py  user.py  user_schemas.py
x-user-service/src/routes/v1/user/: __init__.py  token_introspection.py  views.py
x-user-service/src/schemas/: token.py  user.py
x-user-service/src/services/: s3_service.py  user_service.py
x-user-service/src/utils/: user.py
x-user-service/tests/: conftest.py
x-user-service/tests/services/: test_user_service.py
x-user-service/tests/test_services/: test_user_service.py
x_auth_microservice/: pyproject.toml
x_auth_microservice/src/: .env.dist  create_fastapi_app.py  main.py
x_auth_microservice/src/database/models/: utils.py
x_auth_microservice/src/excepltions/: auth_exceptions.py
x_auth_microservice/src/routes/: auth.py
x_auth_microservice/src/services/: jwt_service.py
