[tool.poetry]
name = "x-auth-service"
version = "0.1.0"
description = ""
authors = ["Egor Konevtsov <konevtsov.connect@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.29.0"
bcrypt = "^4.2.0"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
aio-pika = "^9.5.1"
ruff = "^0.11.8"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["src/**/adapters/db/alembic/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
    # Strange and obscure
    'B008',
    'FA102',
    'D100',
    'D104',
    'D101',
    'D105',
    'D102',
    'RET504',
    'D103',
    'PLR0913',
    'S101',
    'EM101',
    'TRY003',
    'D107',
    'ARG002',
    'RUF001',
    'PLR0912',
    'C901',
    'PGH003',
    'RUF003',
    'TC002',
    'D205',
    'RUF002',
    # Does not work correctly
    'S104',
    'ANN401',
    'PLR2004',
]


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
