[tool.poetry]
name = "x-auth-service"
version = "0.1.0"
description = ""
authors = ["Egor Konevtsov <konevtsov.connect@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.29.0"
bcrypt = "^4.2.0"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
aio-pika = "^9.5.1"
ruff = "^0.11.8"

[tool.ruff]
line-length = 119
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["src/**/alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
ignore = [
    "B008",
    "SIM108",
]


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
