[tool.poetry]
name = "x-post-service"
version = "0.1.0"
description = ""
authors = ["Egor Konevtsov <konevtsov.connect@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
aiohttp = "^3.11.11"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.25.3"


[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "-v -ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
