[tool.poetry]
name = "x-user-service"
version = "0.1.0"
description = ""
authors = ["Egor Konevtsov <konevtsov.connect@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "0.115.5", extras = ["all"]}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
aio-pika = "^9.5.3"
aiohttp = "^3.11.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest-asyncio = "^0.25.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
